Private-Ai-assistant-folderr/brigde/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: local-voice-ai-main
    labels:
        com.docker.compose.project: local-voice-ai-main
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: local-voice-ai-main
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: local-voice-ai-main
                com.docker.compose.service: frontend
                com.docker.compose.network.agent_network: "true"
        spec:
            containers:
                - name: frontend
                  image: local-voice-ai-main-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-3000
                      containerPort: 3000
