Private-Ai-assistant-folderr/brigde/livekit-deployment.yaml
#! livekit-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: livekit
    namespace: local-voice-ai-main
    labels:
        com.docker.compose.project: local-voice-ai-main
        com.docker.compose.service: livekit
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: local-voice-ai-main
            com.docker.compose.service: livekit
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: local-voice-ai-main
                com.docker.compose.service: livekit
                com.docker.compose.network.agent_network: "true"
        spec:
            containers:
                - name: livekit
                  image: livekit/livekit-server:latest
                  imagePullPolicy: IfNotPresent
                  args:
                    - --dev
                    - --bind
                    - 0.0.0.0
                  ports:
                    - name: livekit-7880
                      containerPort: 7880
                    - name: livekit-7881
                      containerPort: 7881
