Private-Ai-assistant-folderr/brigde/livekit-service.yaml
#! livekit-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: livekit-published
    namespace: local-voice-ai-main
    labels:
        com.docker.compose.project: local-voice-ai-main
        com.docker.compose.service: livekit
spec:
    selector:
        com.docker.compose.project: local-voice-ai-main
        com.docker.compose.service: livekit
    ports:
        - name: livekit-7880
          port: 7880
          protocol: TCP
          targetPort: livekit-7880
        - name: livekit-7881
          port: 7881
          protocol: TCP
          targetPort: livekit-7881

# check if there is at least one published port
