Private-Ai-assistant-folderr/brigde/ollama-expose.yaml
#! ollama-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: ollama
    namespace: local-voice-ai-main
    labels:
        com.docker.compose.project: local-voice-ai-main
        com.docker.compose.service: ollama
spec:
    selector:
        com.docker.compose.project: local-voice-ai-main
        com.docker.compose.service: ollama
    ports:
        - name: ollama-11434
          port: 11434
          targetPort: ollama-11434
